2014-03-04  Miguel de Dios <miguel.dedios@artica.es>
	* include/functions_api.php: some fixes backport from the trunk.
	Thanks Cucumber.




git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@9494 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,8 @@
+2014-03-04  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* include/functions_api.php: some fixes backport from the trunk.
+	Thanks Cucumber.
+
 2014-02-20  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* godmode/agentes/fields_manager.php: added the id column in the
