2014-03-04  Miguel de Dios <miguel.dedios@artica.es>
	* include/functions_api.php: fixed the function "api_get_policies".
	Thanks Cucumber.
	
	MERGED FROM THE TRUNK




git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@9497 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,5 +1,12 @@
 2014-03-04  Miguel de Dios <miguel.dedios@artica.es>
 	
+	* include/functions_api.php: fixed the function "api_get_policies".
+	Thanks Cucumber.
+	
+	MERGED FROM THE TRUNK
+
+2014-03-04  Miguel de Dios <miguel.dedios@artica.es>
+	
 	* include/functions_api.php: some fixes backport from the trunk.
 	Thanks Cucumber.
 
