--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,12 @@
+2014-03-05  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* include/ajax/module.php: fixed the ajax calls for to get json
+	data.
+	
+	Incident: #619
+	
+	MERGED FROM THE TRUNK
+
 2014-03-04  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* include/functions_api.php: fixed the function "get_module_name".
