--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,5 +1,14 @@
 2014-03-05  Miguel de Dios <miguel.dedios@artica.es>
 	
+	* index.php: fixed the global search when the text to search end
+	with whitespace.
+	
+	Incident: #605
+	
+	MERGED FROM THE TRUNK
+
+2014-03-05  Miguel de Dios <miguel.dedios@artica.es>
+	
 	* include/ajax/module.php: fixed the ajax calls for to get json
 	data.
 	
