2014-03-06  Miguel de Dios <miguel.dedios@artica.es>
	* operation/agentes/snapshot_view.php: fixed the lost scrollbars.
	
	MERGED FROM THE TRUNK




git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@9518 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,9 @@
+2014-03-06  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* operation/agentes/snapshot_view.php: fixed the lost scrollbars.
+	
+	MERGED FROM THE TRUNK
+
 2014-03-05  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* index.php: fixed the global search when the text to search end
