2014-03-06  Miguel de Dios <miguel.dedios@artica.es>
	* include/functions_reporting.php: fixed the legend for the graphs
	into the topn element report.
	
	Incident: #597
	
	MERGED FROM THE TRUNK




git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@9522 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,5 +1,14 @@
 2014-03-06  Miguel de Dios <miguel.dedios@artica.es>
 	
+	* include/functions_reporting.php: fixed the legend for the graphs
+	into the topn element report.
+	
+	Incident: #597
+	
+	MERGED FROM THE TRUNK
+
+2014-03-06  Miguel de Dios <miguel.dedios@artica.es>
+	
 	* operation/agentes/snapshot_view.php: fixed the lost scrollbars.
 	
 	MERGED FROM THE TRUNK
