2014-03-07  Miguel de Dios <miguel.dedios@artica.es>
	* operation/agentes/status_monitor.php,
	operation/agentes/estado_monitores.php: added the snapshot feature
	in the view of monitors.
	
	MERGED FROM THE TRUNK




git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@9527 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,11 @@
+2014-03-07  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* operation/agentes/status_monitor.php,
+	operation/agentes/estado_monitores.php: added the snapshot feature
+	in the view of monitors.
+	
+	MERGED FROM THE TRUNK
+
 2014-03-06  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* include/functions_reporting.php: fixed the legend for the graphs
