2014-03-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
        * include/functions_reporting.php: sla reports with sla
        completion equal to 100 are ok, not "inside limits".

        MERGED FROM TRUNK



git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@9538 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,10 @@
+2014-03-10 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* include/functions_reporting.php: sla reports with sla 
+	completion equal to 100 are ok, not "inside limits".
+
+	MERGED FROM TRUNK
+
 2014-03-07  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* operation/agentes/status_monitor.php,
