--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,12 @@
+2014-03-11  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* operation/agentes/estado_monitores.php: fixed the length of module
+	name in the agent view.
+	
+	Incident: #608
+	
+	MERGED FROM THE TRUNK
+
 2014-03-10  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* include/functions_visual_map.php: fixed images of static graphs.
