--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,13 @@
+2014-03-12  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* godmode/agentes/module_manager_editor_plugin.php,
+	include/javascript/pandora_modules.js: fixed the automagic deletion
+	of macros when load a component.
+	
+	Incident: #654
+	
+	MERGED FROM THE TRUNK
+
 2014-03-11  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* include/functions_html.php: fixed the PHP warning in the function
