2014-03-12  Miguel de Dios <miguel.dedios@artica.es>
	* godmode/agentes/configurar_agente.php: fixed for opensource
	version the prediction modules.
	
	MERGED FROM THE TRUNK




git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@9568 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,5 +1,12 @@
 2014-03-12  Miguel de Dios <miguel.dedios@artica.es>
 	
+	* godmode/agentes/configurar_agente.php: fixed for opensource
+	version the prediction modules.
+	
+	MERGED FROM THE TRUNK
+
+2014-03-12  Miguel de Dios <miguel.dedios@artica.es>
+	
 	* godmode/agentes/module_manager_editor_plugin.php,
 	include/javascript/pandora_modules.js: fixed the automagic deletion
 	of macros when load a component.
