--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,14 @@
+2014-03-13  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* godmode/reporting/reporting_builder.main.php,
+	godmode/reporting/reporting_builder.php,
+	include/functions_users.php: fixed the access to the report with the
+	user profile "RW" and "RM".
+	
+	Incident: #655
+	
+	MERGED FROM THE TRUNK
+
 2014-03-12  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* godmode/agentes/configurar_agente.php: fixed for opensource
