2014-03-13  Miguel de Dios <miguel.dedios@artica.es>
	* include/functions_visual_map.php: fixed the link of other visual
	map when it is in a public visual console.
	
	Incident: #658
	
	MERGED FROM THE TRUNK

2014-03-13  Miguel de Dios <miguel.dedios@artica.es>
	
	* general/shortcut_bar.php, include/functions_ui.php: fixed the
	PHP warnings.
	
	MERGED FROM THE TRUNK




git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@9579 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,5 +1,21 @@
 2014-03-13  Miguel de Dios <miguel.dedios@artica.es>
 	
+	* include/functions_visual_map.php: fixed the link of other visual
+	map when it is in a public visual console.
+	
+	Incident: #658
+	
+	MERGED FROM THE TRUNK
+
+2014-03-13  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* general/shortcut_bar.php, include/functions_ui.php: fixed the
+	PHP warnings.
+	
+	MERGED FROM THE TRUNK
+
+2014-03-13  Miguel de Dios <miguel.dedios@artica.es>
+	
 	* godmode/reporting/reporting_builder.main.php,
 	godmode/reporting/reporting_builder.php,
 	include/functions_users.php: fixed the access to the report with the
