2014-03-13  Mario Pulido  <mario.pulido@artica.es>
        * pandora_server.redhat.spec: Added netflow directory




git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@9581 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_server/ChangeLog
+++ b/pandora_server/ChangeLog
@@ -1,3 +1,7 @@
+2014-03-13  Mario Pulido  <mario.pulido@artica.es>
+
+	* pandora_server.redhat.spec: Added netflow directory
+
 2014-01-24  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/Config.pm: Updated copyright information.
