--- a/pandora_server/ChangeLog
+++ b/pandora_server/ChangeLog
@@ -1,3 +1,10 @@
+2014-03-18  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* util/pandora_db.pl: fixed the notinit_count in the agents after
+	the delete not init modules.
+	
+	MERGED FROM THE TRUNK
+
 2014-03-13  Ramon Novoa  <rnovoa@artica.es>
 
 	* util/pandora_db.pl: Merged from trunk. Do not compact proc modules.
