--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,12 @@
+2014-03-18  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* godmode/agentes/configurar_agente.php,
+	godmode/agentes/module_manager_editor_plugin.php,
+	include/ajax/module.php, include/javascript/pandora_modules.js:
+	fixed the save module plugin server from the component.
+	
+	MERGED FROM THE TRUNK
+
 2014-03-13  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions_visual_map.php
