--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,5 +1,13 @@
 2014-03-18  Miguel de Dios <miguel.dedios@artica.es>
 	
+	* godmode/agentes/module_manager_editor_plugin.php,
+	include/ajax/module.php, include/javascript/pandora_modules.js:
+	fixed the module plugin.
+	
+	MERGED FROM THE TRUNK
+
+2014-03-18  Miguel de Dios <miguel.dedios@artica.es>
+	
 	* godmode/agentes/configurar_agente.php,
 	godmode/agentes/module_manager_editor_plugin.php,
 	include/ajax/module.php, include/javascript/pandora_modules.js:
