--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,12 @@
+2014-03-19  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* operation/snmpconsole/snmp_view.php,
+	include/functions_ui.php: fixed the view in fullscreen.
+	
+	Incident: #675
+	
+	MERGED FROM THE TRUNK
+
 2014-03-18  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* godmode/agentes/module_manager_editor_plugin.php,
