2014-03-27  Miguel de Dios <miguel.dedios@artica.es>
	* include/gettext.php: fixed the PHP warnings.
	
	Incident: #656
	
	MERGED FROM THE TRUNK




git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@9659 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,11 @@
+2014-03-27  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* include/gettext.php: fixed the PHP warnings.
+	
+	Incident: #656
+	
+	MERGED FROM THE TRUNK
+
 2014-03-19  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* operation/snmpconsole/snmp_view.php,
