2014-03-28  Miguel de Dios <miguel.dedios@artica.es>
	* include/functions_gis.php: set a white background for the
	label of mouse position.
	
	Incident: #583
	
	MERGED FROM THE TRUNK




git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@9666 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,5 +1,14 @@
 2014-03-28  Miguel de Dios <miguel.dedios@artica.es>
 	
+	* include/functions_gis.php: set a white background for the
+	label of mouse position.
+	
+	Incident: #583
+	
+	MERGED FROM THE TRUNK
+
+2014-03-28  Miguel de Dios <miguel.dedios@artica.es>
+	
 	* include/functions_gis.php, operation/agentes/gis_view.php: fixed
 	the GIS view for agents.
 	
