--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,12 @@
+2014-03-28 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+        * godmode/reporting/map_builder.php
+        godmode/netflow/nf_edit_form.php
+        include/ajax/visual_console_builder.ajax.php    
+        operation/menu.php: Fix ACLs in these views.
+
+	Merged from trunk.
+
 2014-03-28  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* include/functions_gis.php: set a white background for the
