2014-03-31  Miguel de Dios <miguel.dedios@artica.es>
	* godmode/agentes/agent_conf_gis.php,
	operation/agentes/gis_view.php: changed the style to message of
	error to set the standar style of new Pandora.
	
	MERGED FROM THE TRUNK




git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@9682 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,11 @@
+2014-03-31  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* godmode/agentes/agent_conf_gis.php,
+	operation/agentes/gis_view.php: changed the style to message of
+	error to set the standar style of new Pandora.
+	
+	MERGED FROM THE TRUNK
+
 2014-03-28  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* include/functions_graph.php: set the zeroes values in the boolean
