--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,5 +1,15 @@
 2014-03-31  Miguel de Dios <miguel.dedios@artica.es>
 	
+	* include/functions_visual_map.php,
+	include/ajax/visual_console_builder.ajax.php: fixed the status color
+	of the percentile bars and bubbles.
+	
+	Incident: #555
+	
+	MERGED FROM THE TRUNK
+
+2014-03-31  Miguel de Dios <miguel.dedios@artica.es>
+	
 	* godmode/servers/plugin.php: fixed the plugins server without
 	parameters.
 	
