--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,21 @@
+2014-04-02  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* operation/search_results.php, operation/search_users.getdata.php:
+	fixed the count of user in the global search main page.
+	
+	Incident: #710
+	
+	MERGED FROM THE TRUNK
+
+2014-04-01  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* include/functions_modules.php, operation/agentes/exportdata.php:
+	fixed the export data from modules with string data.
+	
+	Incident: #707
+	
+	MERGED FROM THE TRUNK
+
 2014-03-31  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* include/functions_visual_map.php,
