2014-04-05  Junichi Satoh  <junichi@rworks.jp>
	* pandoradb_data.sql, pandoradb.data.oracle.sql,
	pandoradb.data.postgreSQL.sql: Fixed typo.



git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@9730 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,8 @@
+2014-04-05  Junichi Satoh  <junichi@rworks.jp>
+
+	* pandoradb_data.sql, pandoradb.data.oracle.sql,
+        pandoradb.data.postgreSQL.sql: Fixed typo.
+
 2014-04-02  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* operation/search_results.php, operation/search_users.getdata.php:
