--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,10 @@
+2014-04-24 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+        * operation/events/events.build_table.php: Fixed 
+        multiple validation of events in event list view.
+
+	MERGED FROM TRUNK.
+
 2014-04-19  Junichi Satoh  <junichi@rworks.jp>
 
 	* godmode/agentes/agent_manager.php,
