--- a/pandora_server/ChangeLog
+++ b/pandora_server/ChangeLog
@@ -1,3 +1,8 @@
+2014-04-27  Junichi Satoh <junichi@rworks.jp>
+
+	* lib/PandoraFMS/PluginServer.pm: Merged from trunk. Fixed plugin
+	execution failure when multibyte characters are used in plugins macros.
+
 2014-03-18  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* util/pandora_db.pl: fixed the notinit_count in the agents after
