--- a/pandora_agents/unix/ChangeLog
+++ b/pandora_agents/unix/ChangeLog
@@ -1,3 +1,9 @@
+2014-04-30  Sancho Lerena <slerena@artica.es>
+
+        * DEBIAN/postinst,
+        DEBIAN/make_deb_package.sh: Solved problem with plugins in agent distribution
+        on Debian. 
+
 2014-03-13  Mario Pulido <mario.pulido@artica.es>
 
 	* plugins/inventory: Distributions compatibility
