2014-05-04  Junichi Satoh  <junichi@rworks.jp>
	* godmode/agentes/planned_downtime.list.php: Merged from trunk.
	Fixed unexpected agent deletion that is not associated with the
	planned downtime which is deleted.



git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@9850 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,9 @@
+2014-05-04  Junichi Satoh  <junichi@rworks.jp>
+
+	* godmode/agentes/planned_downtime.list.php: Merged from trunk.
+	Fixed unexpected agent deletion that is not associated with the
+	planned downtime which is deleted.
+
 2014-04-24 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
         * operation/events/events.build_table.php: Fixed 
