--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,11 @@
+2014-05-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+        * include/functions_agents.php
+          include/functions_networkmap.php: Fixed not init agent state
+        in networkmap.
+
+	MERGED FROM TRUNK
+
 2014-05-05  Vanessa Gil  <vanessa.gil@artica.es>
 
 	* pandoradb.data.oracle.sql
