--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,5 +1,14 @@
 2014-05-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
+	* pandora_console/include/functions_groups.php	
+	  pandora_console/include/functions_events.php: Fixed bug 
+	in event viewer. A user could not be assigned himself as
+	the owner of the event.
+
+	MERGED FROM TRUNK
+
+2014-05-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
         * include/functions_agents.php
           include/functions_networkmap.php: Fixed not init agent state
         in networkmap.
