2014-05-06  Alejandro Gallardo <alejandro.gallardo@artica.es>
	* godmode/alerts/alert_list.list.php: Now the form and
	sort values are keeped.


git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@9872 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,8 @@
+2014-05-06  Alejandro Gallardo <alejandro.gallardo@artica.es>
+	
+	* godmode/alerts/alert_list.list.php: Now the form and
+	sort values are keeped.
+
 2014-05-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
 	* pandora_console/include/functions_groups.php	
