--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,10 @@
+2014-05-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
+	* include/functions_tags.php: Fixed ACL tags in complex
+	scenarios (profiles with groups, tags and propagation).
+
+	MERGED FRON TRUNK
+
 2014-05-07  Alejandro Gallardo <alejandro.gallardo@artica.es>
 	
 	* godmode/agentes/planned_downtime.editor.php,
