2014-05-08  Koichiro KIKUCHI <koichiro@rworks.jp>
	* godmode/agentes/agent_wizard.snmp_interfaces_explorer.php:
	 (Re)added ifXTable support to the SNMP interface wizard.

	MERGED FROM TRUNK.



git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@9895 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,10 @@
+2014-05-08  Koichiro KIKUCHI <koichiro@rworks.jp>
+
+	* godmode/agentes/agent_wizard.snmp_interfaces_explorer.php:
+	 (Re)added ifXTable support to the SNMP interface wizard.
+
+	MERGED FROM TRUNK.
+
 2014-05-08  Alejandro Gallardo <alejandro.gallardo@artica.es>
 	
 	* include/functions_visual_map.php: Now the linked
