2014-05-09  Alejandro Gallardo <alejandro.gallardo@artica.es>
	* general/shortcut_bar.php: Updated the shortcut bar.

	* include/styles/pandora.css: Added new styles for the
	shortcut bar elements.
	
	MERGED FROM TRUNK.


git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@9901 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,12 @@
+2014-05-09  Alejandro Gallardo <alejandro.gallardo@artica.es>
+	
+	* general/shortcut_bar.php: Updated the shortcut bar.
+
+	* include/styles/pandora.css: Added new styles for the
+	shortcut bar elements.
+	
+	MERGED FROM TRUNK.
+
 2014-05-08  Koichiro KIKUCHI <koichiro@rworks.jp>
 
 	* godmode/agentes/agent_wizard.snmp_interfaces_explorer.php:
