--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,17 @@
+2014-05-12  Sergio Martin <sergio.martin@artica.es>
+
+	* godmode/reporting/reporting_builder.php
+	godmode/reporting/reporting_builder.item_editor.php
+	include/functions_reporting.php
+	include/functions_reports.php: Added SLA Monthly reports. Its
+	an enterprise feature, so here is only the code to hook it and
+	some forms logic
+
+	* include/functions_html.php: Add support to header styles in
+	html_print_table function. Used in SLA monthly reports
+
+	MERGE FROM TRUNK
+
 2014-05-09  Alejandro Gallardo <alejandro.gallardo@artica.es>
 	
 	* general/shortcut_bar.php: Updated the shortcut bar.
