2014-05-17  Junichi Satoh  <junichi@rworks.jp>
	* include/functions_html.php: Fixed the PHP warning.

	MERGED FROM TRUNK.



git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@9947 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,9 @@
+2014-05-17  Junichi Satoh  <junichi@rworks.jp>
+
+	* include/functions_html.php: Fixed the PHP warning.
+
+	MERGED FROM TRUNK.
+
 2014-05-14  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions_graph.php: fixed "resolution" of custom
