2014-05-20  Alejandro Gallardo <alejandro.gallardo@artica.es>
	* include/functions_api.php: Fixed the function
	"get_events_with_user". Fixed the json output format.
	
	MERGED FROM TRUNK.


git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@9965 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,10 @@
+2014-05-20  Alejandro Gallardo <alejandro.gallardo@artica.es>
+	
+	* include/functions_api.php: Fixed the function
+	"get_events_with_user". Fixed the json output format.
+	
+	MERGED FROM TRUNK.
+
 2014-05-17  Junichi Satoh  <junichi@rworks.jp>
 
 	* include/functions_html.php: Fixed the PHP warning.
