2014-05-22  Sergio Martin <sergio.martin@artica.es>
	* include/functions_graph.php: Fix end of unknown
	periods in graphs when activate events storm protection
	or other prevent events triggering

	MERGED FROM TRUNK



git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@9988 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,11 @@
+2014-05-22  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_graph.php: Fix end of unknown
+	periods in graphs when activate events storm protection
+	or other prevent events triggering
+
+	MERGED FROM TRUNK
+
 2014-05-20  Alejandro Gallardo <alejandro.gallardo@artica.es>
 	
 	* include/functions_api.php: Fixed the function
