2014-05-27 Hirofumi Kosaka <kosaka@rworks.jp>
	* godmode/massive/massive_enable_disable_alerts.php,
	godmode/massive/massive_standby_alerts.php: Long agent/module
	name with multi-byte chars could be shown as 'null' on alert
	list at the massive alert enable/disable/standby operations
	screen (because LEFT() in SQL does not consider multi-byte
	chars, neither SUBSTR() for alternative).

	MERGED FROM TRUNK (r9791).



git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@10013 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,14 @@
+2014-05-27 Hirofumi Kosaka <kosaka@rworks.jp>
+
+	* godmode/massive/massive_enable_disable_alerts.php,
+	godmode/massive/massive_standby_alerts.php: Long agent/module
+	name with multi-byte chars could be shown as 'null' on alert
+	list at the massive alert enable/disable/standby operations
+	screen (because LEFT() in SQL does not consider multi-byte
+	chars, neither SUBSTR() for alternative).
+
+	MERGED FROM TRUNK (r9791).
+
 2014-05-22  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions_graph.php: Fix end of unknown
