2014-06-03  Alejandro Gallardo <alejandro.gallardo@artica.es>
	* include/functions_visual_map.php: Now the linked visual
	maps are opened as a popup.
	
	MERGED FROM TRUNK.


git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@10089 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,10 @@
+2014-06-03  Alejandro Gallardo <alejandro.gallardo@artica.es>
+	
+	* include/functions_visual_map.php: Now the linked visual
+	maps are opened as a popup.
+	
+	MERGED FROM TRUNK.
+
 2014-05-27 Hirofumi Kosaka <kosaka@rworks.jp>
 
 	* godmode/massive/massive_enable_disable_alerts.php,
