--- a/pandora_agents/unix/ChangeLog
+++ b/pandora_agents/unix/ChangeLog
@@ -1,3 +1,9 @@
+2014-06-04  Koichiro KIKUCHI <koichiro@rworks.jp>
+
+	* pandora_agent: Allow spaces in module group names.
+
+	MERGED FROM TRUNK
+
 2014-04-30  Sancho Lerena <slerena@artica.es>
 
         * DEBIAN/postinst,
