--- a/pandora_server/ChangeLog
+++ b/pandora_server/ChangeLog
@@ -1,3 +1,8 @@
+2014-06-11  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/Core.pm: Merged from trunk. Prevent race conditions
+	  between keep_alive and keep_alive_nd.
+
 2014-04-27  Junichi Satoh <junichi@rworks.jp>
 
 	* lib/PandoraFMS/PluginServer.pm: Merged from trunk. Fixed plugin
