2014-06-13  Ramon Novoa  <rnovoa@artica.es>
	* lib/PandoraFMS/Core.pm: Removed an unused pm.



git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@10185 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_server/ChangeLog
+++ b/pandora_server/ChangeLog
@@ -1,3 +1,7 @@
+2014-06-13  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/Core.pm: Removed an unused pm.
+
 2014-06-12  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/Core.pm: Merged from trunk. Removed the keepalive
