--- a/pandora_server/ChangeLog
+++ b/pandora_server/ChangeLog
@@ -1,3 +1,10 @@
+2014-06-17 Hirofumi Kosaka <kosaka@rworks.jp>
+
+	* lib/PandoraFMS/PluginServer.pm: Fixed to handle plugin's
+	output that includes multibyte character string.
+
+	MERGED FROM THE TRUNK
+
 2014-06-13  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/Core.pm: Removed an unused pm.
