--- a/pandora_server/ChangeLog
+++ b/pandora_server/ChangeLog
@@ -1,3 +1,9 @@
+2014-06-17 Hirofumi Kosaka <kosaka@rworks.jp>
+
+	* lib/PandoraFMS/Core.pm: Added _timezone_ alert macro.
+
+	Merged from: trunk
+
 2013-11-26  KIKUCHI koichiro <koichiro@rworks.jp>
 
 	* util/pandora_remote_agent.sh: Added "-e" option to be able to
