2014-06-17 Hirofumi Kosaka <kosaka@rworks.jp>
	* include/help/en/help_alert_macros.php,
	include/help/es/help_alert_macros.php,
	include/help/ja/help_alert_macros.php: Added _timezone_
	alert macro descriptions.

	MERGED FROM THE TRUNK


git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_4.0@10210 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,12 @@
+2014-06-17 Hirofumi Kosaka <kosaka@rworks.jp>
+        
+	* include/help/en/help_alert_macros.php,
+	include/help/es/help_alert_macros.php,
+	include/help/ja/help_alert_macros.php: Added _timezone_
+	alert macro descriptions.
+
+	MERGED FROM THE TRUNK
+
 2014-03-12  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* godmode/agentes/configurar_agente.php: fixed for opensource
