--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,10 @@
+2014-06-24  Junichi Satoh  <junichi@rworks.jp>
+
+	* godmode/massive/massive_edit_modules.php: Fixed unexpected update
+	of 'module_interval'.
+
+	MERGED FROM TRUNK.
+
 2014-06-03  Alejandro Gallardo <alejandro.gallardo@artica.es>
 	
 	* include/functions_visual_map.php: Now the linked visual
