2014-06-30 Koichiro KIKUCHI <koichiro@rworks.jp>
	* extensions/agents_modules.php,
	  include/functions_events.php,
	  operation/agentes/estado_monitores.php,
	  operation/agentes/status_monitor.php,
	  operation/search_modules.php,
	  operation/tree.php: Fixed garbled title issue in the module graph.

	MERGED FROM TRUNK.




git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@10310 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,15 @@
+2014-06-30 Koichiro KIKUCHI <koichiro@rworks.jp>
+
+	* extensions/agents_modules.php,
+	  include/functions_events.php,
+	  operation/agentes/estado_monitores.php,
+	  operation/agentes/status_monitor.php,
+	  operation/search_modules.php,
+	  operation/tree.php: Fixed garbled title issue in the module graph.
+
+	MERGED FROM TRUNK.
+
+
 2014-06-24  Junichi Satoh  <junichi@rworks.jp>
 
 	* godmode/massive/massive_edit_modules.php: Fixed unexpected update
