--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,4 +1,12 @@
 2014-06-30 Koichiro KIKUCHI <koichiro@rworks.jp>
+ 
+	* operation/agentes/estado_monitores.php,
+	  operation/agentes/status_monitor.php,
+	  operation/search_modules.php: Fixed snapshot view title.
+
+	MERGED FROM TRUNK.
+
+2014-06-30 Koichiro KIKUCHI <koichiro@rworks.jp>
 
 	* extensions/agents_modules.php,
 	  include/functions_events.php,
