--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,12 @@
+2014-07-07  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* operation/agentes/alerts_status.php: fixed the pagination with
+	the column sorted.
+	
+	INCIDENT: #977
+	
+	MERGED FROM THE TRUNK
+
 2014-06-30 Koichiro KIKUCHI <koichiro@rworks.jp>
  
 	* operation/agentes/estado_monitores.php,
