--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,8 @@
+2014-07-08 Hirofumi Kosaka <kosaka@rworks.jp>
+
+	* include/functions_api.php: Fixed that 'set enable_module' API
+	had not worked.
+
 2014-07-07  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* operation/agentes/alerts_status.php: fixed the pagination with
