2014-07-10  Miguel de Dios <miguel.dedios@artica.es>
	* include/functions_api.php: fixed the call "set_update_agent"
	because before the call get the id_server but this data never
	was translated to name_server. 
	
	MERGED FROM THE TRUNK




git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@10334 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,11 @@
+2014-07-10  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* include/functions_api.php: fixed the call "set_update_agent"
+	because before the call get the id_server but this data never
+	was translated to name_server. 
+	
+	MERGED FROM THE TRUNK
+
 2014-07-08 Hirofumi Kosaka <kosaka@rworks.jp>
 
 	* include/functions_api.php: Fixed that 'set enable_module' API
