2014-07-10 Koichiro Kikuchi <koichiro@rworks.jp>
	* bin/pandora_server: Fixed issue that pandora_server failed to
	 shut down properly on non-Linux systems.



git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@10335 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_server/ChangeLog
+++ b/pandora_server/ChangeLog
@@ -1,3 +1,8 @@
+2014-07-10 Koichiro Kikuchi <koichiro@rworks.jp>
+
+	* bin/pandora_server: Fixed issue that pandora_server failed to
+	 shut down properly on non-Linux systems.
+
 2014-06-17 Hirofumi Kosaka <kosaka@rworks.jp>
 
 	* lib/PandoraFMS/PluginServer.pm: Fixed to handle plugin's
