2014-07-11 Hirofumi Kosaka <kosaka@rworks.jp>
	* include/functions_api.php: restored the parameter name server in
	the api call "set_new_agent".

	MERGED FROM THE TRUNK


git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@10336 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,10 @@
+2014-07-11 Hirofumi Kosaka <kosaka@rworks.jp>
+
+	* include/functions_api.php: restored the parameter name server in
+	the api call "set_new_agent".
+
+	MERGED FROM THE TRUNK
+
 2014-07-10  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* include/functions_api.php: fixed the call "set_update_agent"
