2014-07-11 Hirofumi Kosaka <kosaka@rworks.jp>
	* util/pandora_manage.pl: To handle multi-byte strings in
	command line arguments (assumes utf-8).

	MERGED FROM THE TRUNK


git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@10338 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_server/ChangeLog
+++ b/pandora_server/ChangeLog
@@ -1,3 +1,10 @@
+2014-07-11 Hirofumi Kosaka <kosaka@rworks.jp>
+
+	* util/pandora_manage.pl: To handle multi-byte strings in
+	command line arguments (assumes utf-8).
+
+	MERGED FROM THE TRUNK
+
 2014-07-10 Koichiro Kikuchi <koichiro@rworks.jp>
 
 	* bin/pandora_server: Fixed issue that pandora_server failed to
