2014-07-30  Ramon Novoa  <rnovoa@artica.es>
	* lib/PandoraFMS/Core.pm: Merged from trunk. Set unknown modules to normal
	  if new data arrives but ff_threshold is greater than 0.



git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@10363 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_server/ChangeLog
+++ b/pandora_server/ChangeLog
@@ -1,3 +1,8 @@
+2014-07-30  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/Core.pm: Merged from trunk. Set unknown modules to normal
+	  if new data arrives but ff_threshold is greater than 0.
+
 2014-07-11 Hirofumi Kosaka <kosaka@rworks.jp>
 
 	* util/pandora_manage.pl: To handle multi-byte strings in
