--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,8 @@
+2014-08-01  Miguel de Dios <miguel.dedios@artica.es>
+	
+	* godmode/agentes/planned_downtime.editor.php,
+	godmode/agentes/module_manager_editor_plugin.php: fixed the acl.
+
 2014-07-11 Hirofumi Kosaka <kosaka@rworks.jp>
 
 	* include/functions_api.php: restored the parameter name server in
