--- a/pandora_server/ChangeLog
+++ b/pandora_server/ChangeLog
@@ -1,3 +1,11 @@
+2014-08-05 Hirofumi Kosaka <kosaka@rworks.jp>
+
+	* lib/PandoraFMS/Core.pm: Fixed that unknown modules would be
+	set to normal if its status is not normal, when new data
+	arrives but ff_threshold is greater than 0.
+
+	MERGED FROM THE TRUNK
+
 2014-07-30  Ramon Novoa  <rnovoa@artica.es>
 
 	* lib/PandoraFMS/Core.pm: Merged from trunk. Set unknown modules to normal
