--- a/pandora_agents/unix/ChangeLog
+++ b/pandora_agents/unix/ChangeLog
@@ -1,3 +1,7 @@
+2014-08-07  Ramon Novoa  <rnovoa@artica.es>
+
+	* pandora_agent_daemon: Merged from trunk. Fixed the ps call on HP-UX.
+
 2014-06-04  Koichiro KIKUCHI <koichiro@rworks.jp>
 
 	* pandora_agent: Allow spaces in module group names.
