2014-08-11 Hirofumi Kosaka <kosaka@rworks.jp>
	* lib/PandoraFMS/Core.pm: Fixed modules would have ignored
	ff_threshold when the module shifted from normal to critical
	while its status remained unknown.

	MERGED FROM THE TRUNK


git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@10395 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_server/ChangeLog
+++ b/pandora_server/ChangeLog
@@ -1,3 +1,11 @@
+2014-08-11 Hirofumi Kosaka <kosaka@rworks.jp>
+
+	* lib/PandoraFMS/Core.pm: Fixed modules would have ignored
+	ff_threshold when the module shifted from normal to critical
+	while its status remained unknown.
+
+	MERGED FROM THE TRUNK
+
 2014-08-05 Hirofumi Kosaka <kosaka@rworks.jp>
 
 	* lib/PandoraFMS/Core.pm: Suppress "going to normal (warning,
