2014-08-14 Hirofumi Kosaka <kosaka@rworks.jp>
	* lib/PandoraFMS/PluginServer.pm: Added new alert macros
	_plugin_param1_ (,_plugin_param2_ and so on) to access to
	each of plugin parameters. Also added _plugin_param1_desc_
	to access to each description of plugin parameters.

	MERGED FROM THE TRUNK



git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@10419 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_server/ChangeLog
+++ b/pandora_server/ChangeLog
@@ -1,3 +1,12 @@
+2014-08-14 Hirofumi Kosaka <kosaka@rworks.jp>
+
+	* lib/PandoraFMS/PluginServer.pm: Added new alert macros
+	_plugin_param1_ (,_plugin_param2_ and so on) to access to
+	each of plugin parameters. Also added _plugin_param1_desc_
+	to access to each description of plugin parameters.
+
+	MERGED FROM THE TRUNK
+
 2014-08-11 Hirofumi Kosaka <kosaka@rworks.jp>
 
 	* lib/PandoraFMS/Core.pm: Fixed modules would have ignored
