2014-08-21 Hirofumi Kosaka <kosaka@rworks.jp>
	* lib/PandoraFMS/Core.pm: Prevent some warnings would be
	written at pandora_server.error ("Use of uninitialized value
	in subroutine entry at ..." and "Use of uninitialized value in
	string ne at ...").



git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@10441 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_server/ChangeLog
+++ b/pandora_server/ChangeLog
@@ -1,3 +1,10 @@
+2014-08-21 Hirofumi Kosaka <kosaka@rworks.jp>
+
+	* lib/PandoraFMS/Core.pm: Prevent some warnings would be
+	written at pandora_server.error ("Use of uninitialized value
+	in subroutine entry at ..." and "Use of uninitialized value in
+	string ne at ...").
+
 2014-08-14 Hirofumi Kosaka <kosaka@rworks.jp>
 
 	* lib/PandoraFMS/PluginServer.pm: Added new alert macros
