2014-08-22  Junichi Satoh  <junichi@rworks.jp>
	* mobile/operation/events.php: Fixed present event filter loading
	failure.

	MERGED FROM THE TRUNK



git-svn-id: https://svn.code.sf.net/p/pandora/code/branches/pandora_5.0@10448 c3f86ba8-e40f-0410-aaad-9ba5e7f4b01f

--- a/pandora_console/ChangeLog
+++ b/pandora_console/ChangeLog
@@ -1,3 +1,10 @@
+2014-08-22  Junichi Satoh  <junichi@rworks.jp>
+
+	* mobile/operation/events.php: Fixed present event filter loading
+	failure.
+
+	MERGED FROM THE TRUNK
+
 2014-08-01  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* godmode/agentes/planned_downtime.editor.php,
