--- a/pandora_server/ChangeLog
+++ b/pandora_server/ChangeLog
@@ -1,3 +1,11 @@
+2014-08-27 Hirofumi Kosaka <kosaka@rworks.jp>
+
+	* lib/PandoraFMS/PluginServer.pm: Fixed that _plugin_param2_
+	and _plugin_param2_desc_ (and so on) were not replaced with
+	the corresponding values.
+
+	MERGED FROM THE TRUNK
+
 2014-08-21 Hirofumi Kosaka <kosaka@rworks.jp>
 
 	* lib/PandoraFMS/Core.pm: Prevent some warnings would be
