--- a/pandora_server/ChangeLog
+++ b/pandora_server/ChangeLog
@@ -1,3 +1,11 @@
+2014-09-10 Akihiro Uchida <auchida@rworks.jp>
+
+	* lib/PandoraFMS/Core.pm: Fixed that unknown modules are never
+	recovered when module data is received correctly in/after the
+	race condition (module execution time exceeds its interval).
+
+	MERGED FROM THE DEVELOP
+
 2014-08-27 Hirofumi Kosaka <kosaka@rworks.jp>
 
 	* lib/PandoraFMS/PluginServer.pm: Fixed that _plugin_param2_
